--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+/* --------------------- 기본 스타일 --------------------- */
 body {
 	margin: 40px 10px;
 	padding: 0;
@@ -23,6 +24,7 @@ body h1 {
 	margin: 200px auto 0px;
 	text-align: center;
 }
+/* --------------------- 기본 스타일 --------------------- */
 
 /* --------------------- 모달 --------------------- */
 .modal {
@@ -69,3 +71,7 @@ body h1 {
 	margin: 10px 20px;
 }
 /* --------------------- 모달 --------------------- */
+/* --------------------- 커스텀 이벤트 카드 --------------------- */
+.custom-event-card {
+	background-color: white;
+}
