[권준하] 플래너 색상 변경 작업 + 이벤트 카드 기본 스타일링 작업
* 이벤트 카드 배경 투명 색상으로 변경
* 이벤트 카드 체크 유무에 따라 테두리 및 글자 색상 변경
* 이벤트 카드 상단에 날짜 정보 추가
* 오늘 날짜에 대한 배경 색상 변경

--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -72,6 +72,11 @@ body h1 {
 }
 /* --------------------- 모달 --------------------- */
 /* --------------------- 커스텀 이벤트 카드 --------------------- */
-.custom-event-card {
-	background-color: white;
+input[type="checkbox"] {
+	accent-color: blue;
+}
+/* --------------------- 커스텀 이벤트 카드 --------------------- */
+/* --------------------- 날짜 배경 --------------------- */
+.fc-day-today {
+	background-color: #F5F5F5 !important;
 }
