[권준하] 수정/삭제 팝업 외부 클릭시 닫기 구현 + 기타 스타일 작업
* 수정/삭제 팝업 외부 클릭시 닫기 구현
* 기타 수정사항 및 스타일 작업 진행

--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -133,3 +133,11 @@ input[type="checkbox"] {
 .fc-sticky {
 	position: static;
 }
+
+.fc-timegrid-slot-label-cushion {
+	color: transparent;
+}
+
+thead .fc-scroller {
+	overflow: hidden !important;
+}
