--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -21,8 +21,56 @@ body h1 {
 
 .container-burger {
 	width: 150px;
-	margin: 200px auto 0px;
 	text-align: center;
+	position: fixed;
+	top: 500px;
+	right: 50px;
+	z-index: 9999;
+}
+
+.container-burger .btn-burger {
+	width: 50px;
+    border-radius: 50%;
+    height: 50px;
+    border-color: transparent;
+    background-color: lightblue;
+    color: white;
+    cursor: pointer;
+}
+
+.container-burger .btn-add {
+	width: 50px;
+    border-radius: 50%;
+    height: 50px;
+    border-color: transparent;
+    background-color: gold;
+    color: white;
+    cursor: pointer;
+}
+
+.container-burger .btn-atd {
+	width: 50px;
+    border-radius: 50%;
+    height: 50px;
+    border-color: transparent;
+    background-color: #4582EC;
+    color: white;
+    cursor: pointer;
+}
+
+.container-burger .btn-burger span {
+	font-size: 30px;
+    margin-top: 2px;
+}
+
+.container-burger .btn-add span {
+	font-size: 30px;
+    margin-top: 3px;
+}
+
+.container-burger .btn-atd span {
+	font-size: 30px;
+    margin-top: 2px;
 }
 /* --------------------- 기본 스타일 --------------------- */
 
@@ -72,6 +120,40 @@ body h1 {
 }
 /* --------------------- 모달 --------------------- */
 /* --------------------- 커스텀 이벤트 카드 --------------------- */
-.custom-event-card {
-	background-color: white;
+input[type="checkbox"] {
+	accent-color: blue;
+}
+/* --------------------- 커스텀 이벤트 카드 --------------------- */
+/* --------------------- 날짜 배경 --------------------- */
+.fc-day-today {
+	background-color: #F5F5F5 !important;
+}
+
+
+.fc-sticky {
+	position: static;
+}
+
+.fc-timegrid-slot-label-cushion {
+	color: transparent;
+}
+
+thead .fc-scroller {
+	overflow: hidden !important;
+}
+
+.fc-next-button,
+.fc-prev-button {
+	background-color: transparent !important;
+	border-color: transparent !important;
+}
+
+.fc-next-button span,
+.fc-prev-button span {
+	color: black !important;
+} 
+
+.fc-today-button {
+	background-color: #4582EC !important;
+	border-color: transparent !important;
 }
