--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -9,7 +9,7 @@ body {
 
 body h1 {
 	width: 500px;
-	margin: 0 auto 50px;
+	margin: 30px auto 50px;
 	text-align: center;
 }
 
@@ -27,49 +27,43 @@ body h1 {
 	z-index: 9999;
 }
 
-.container-burger .btn-burger {
+.container-burger .floating-buttons {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	margin-bottom: 10px;
+
+	/* 초기 상태는 숨김 (위로 올려서 투명하게) */
+	transform: translateY(0);
+	opacity: 0;
+	pointer-events: none;
+	transition: all 0.3s ease;
+}
+
+.container-burger.active .floating-buttons {
+	transform: translateY(-0px); /* 올라오게 */
+	opacity: 1;
+	pointer-events: auto;
+}
+
+/* 버튼 스타일 공통 */
+.container-burger button {
 	width: 50px;
-    border-radius: 50%;
-    height: 50px;
-    border-color: transparent;
-    background-color: lightblue;
-    color: white;
-    cursor: pointer;
+	height: 50px;
+	border-radius: 50%;
+	border: none;
+	color: white;
+	cursor: pointer;
 }
 
-.container-burger .btn-add {
-	width: 50px;
-    border-radius: 50%;
-    height: 50px;
-    border-color: transparent;
-    background-color: gold;
-    color: white;
-    cursor: pointer;
-}
+.container-burger .btn-burger { background-color: lightblue; }
+.container-burger .btn-add { background-color: gold; }
+.container-burger .btn-atd { background-color: #4582EC; }
 
-.container-burger .btn-atd {
-	width: 50px;
-    border-radius: 50%;
-    height: 50px;
-    border-color: transparent;
-    background-color: #4582EC;
-    color: white;
-    cursor: pointer;
-}
-
-.container-burger .btn-burger span {
+.container-burger button span {
 	font-size: 30px;
-    margin-top: 2px;
-}
-
-.container-burger .btn-add span {
-	font-size: 30px;
-    margin-top: 3px;
-}
-
-.container-burger .btn-atd span {
-	font-size: 30px;
-    margin-top: 2px;
+	margin-top: 2px;
 }
 
 /* --------------------- 모달 --------------------- */
