--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -4,13 +4,12 @@
 body {
 	padding: 0;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-	font-size: 14px;
+	font-size: 16px;
 }
 
 body h1 {
 	width: 500px;
-	margin: 30px auto 50px;
-	text-align: center;
+	margin: 30px 0px 50px 115px;
 }
 
 #calendar {
