[권준하] 플래너 스타일 작업 진행
* 플래너 스타일이 수정되었습니다.

--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -81,7 +81,16 @@ body h1 {
 
 .modal .modal-content {
 	width: 25%;
-	height: 50%;
+	height: 55%;
+	background-color: #fff;
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
+}
+
+.modal.modal-3  .modal-content {
+	width: 25%;
+	height: 20%;
 	background-color: #fff;
 	border-radius: 15px;
 	display: flex;
