[권준하] 사이드바 포함 기탕 스타일 작업 수행
* 사이드바의 개선 및 기타 스타일 작업을 수행했습니다.

--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -121,12 +121,12 @@ body h1 {
 
 /* --------------------- 체크 박스 --------------------- */
 input[type="checkbox"] {
-	accent-color: blue;
+	accent-color: #205DAC;
 }
 
 /* --------------------- 날짜 배경 --------------------- */
 .fc-day-today {
-	background-color: rgba(32, 93, 172, 0.1) !important;
+	background-color: rgba(32, 93, 172, 0.05) !important;
 }
 
 
