--- a/library_lms/src/main/webapp/css/calendar/calendar.css
+++ b/library_lms/src/main/webapp/css/calendar/calendar.css
@@ -21,8 +21,8 @@ body h1 {
 	width: 150px;
 	text-align: center;
 	position: fixed;
-	top: 500px;
-	right: 50px;
+	top: 610px;
+	right: 100px;
 	z-index: 9999;
 }
 
@@ -121,12 +121,12 @@ body h1 {
 
 /* --------------------- 체크 박스 --------------------- */
 input[type="checkbox"] {
-	accent-color: blue;
+	accent-color: #205DAC;
 }
 
 /* --------------------- 날짜 배경 --------------------- */
 .fc-day-today {
-	background-color: #F5F5F5 !important;
+	background-color: rgba(32, 93, 172, 0.05) !important;
 }
 
 
